tenzir/integration/data/reference/functions/test_slice/step_08.ref
error: `stride` must be greater 0, but got -1
 --> <input>:5:30
  |
5 |     x = x.slice(0, 6, stride=-1)
  |                              ^^ 
  |